--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#097E7D" />
+    <meta name="description" content="A simple hyperbolic tessellation generator on a Poincare Disk" />
+    <meta property="og:title" content="Hyperbolic Tessellation" />
+    <meta property="og:description" content="A simple hyperbolic tessellation generator on a Poincare Disk" />
+    <meta property="og:image" content="%PUBLIC_URL%/moae-logo.png" />
+    <meta property="og:url" content="https://moaesaycto.github.io/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/moae-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
